# fcgisgi

./: .gitignore  LICENSE  README.md  pyproject.toml
fcgisgi/: __init__.py  asgi_adapter.py  asyncio_server.py  asyncio_wsgi_server.py  sansio.py  wsgi_adapter.py
tests/: test_asgi.py  test_asgi_disconnect.py  test_asgi_lifespan.py  test_asgi_lifespan_state.py  test_asgi_scope.py  test_asyncio.py  test_asyncio_wsgi.py  test_force_script_name.py  test_get_values.py  test_inherited_socket.py  test_keep_conn.py  test_sansio.py  test_unix_socket.py  test_wsgi.py  test_wsgi_close.py  test_wsgi_environ.py
