[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fcgisgi"
license = "MIT"
version = "0.2.0"
authors = [
  { name="ko-zu", email="causeless@gmail.com" },
]
description = "A FastCGI to ASGI/WSGI adapter using asyncio"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Framework :: AsyncIO",
]

[project.urls]
"Homepage" = "https://github.com/ko-zu/fcgisgi"
"Bug Tracker" = "https://github.com/ko-zu/fcgisgi/issues"

[tool.black]
line-length = 119
